[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/Wall_top.png" type="Texture" id=1]
[ext_resource path="res://sprites/Wall_left.png" type="Texture" id=2]
[ext_resource path="res://sprites/Wall_right.png" type="Texture" id=3]
[ext_resource path="res://sprites/Wall_bottom.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Game/Wall.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "top",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "bottom",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7.91726, 0.702818 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7.91726, 0.492594 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 0.664524, 7.95555 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 0.559414, 7.95555 )

[node name="Wall" type="Area2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.105114, 0 )
frames = SubResource( 5 )
animation = "top"

[node name="TopCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.10511, -7.14762 )
shape = SubResource( 6 )

[node name="BottomCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -0.210224, 7.46296 )
shape = SubResource( 7 )

[node name="RightCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 7.25274, -0.210224 )
shape = SubResource( 8 )

[node name="LeftCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -7.46296, -0.105112 )
shape = SubResource( 9 )
